# material-grammar

./: .gitignore  README.md  index.html  pixi.toml  skills-lock.json
mat_dataViz/: .gitignore  pixi.toml
mat_dataViz/data/: session.json
mat_dataViz/hello-framework/: README.md  observablehq.config.js  package-lock.json  package.json
mat_dataViz/hello-framework/src/: index.md
mat_dataViz/hello-framework/test/: evaluation-client.test.js  property-metrics.test.js
max_ports/: .dockerignore  .gitignore  .sesskey  Dockerfile  LICENSE  MATGRAM.md  PORT.md  README.md  docker-compose.yml  pixi.toml  pyproject.toml
max_ports/_proc/: 00_config.ipynb  02_weights.ipynb  04_batch.ipynb  index.ipynb  nbdev.yml
max_ports/docs/: railway.md
max_ports/finetune_ckpts/: README.md
max_ports/learn/: README.md
max_ports/mat_gram01/: __init__.py  _modidx.py  arch.py  batch_processor.py  graph.py  model.py  model_config.py  tokenizer.py  weight_adapters.py
max_ports/materials_smi_ted/: __init__.py  arch.py  batch_processor.py  graph.py  model.py  model_config.py  tokenizer.py  weight_adapters.py
max_ports/matgram/: __init__.py  app.py  checkpoint_export.py  cli.py  export_cache.py  max_client.py  serve_manager.py  settings.py  state.py
max_ports/model_assets/ibm-research_materials.smi-ted/: config.json
max_ports/model_assets/smi-ted-esol/: config.json  matgram-export.json
max_ports/nbs/: 00_config.ipynb  01_tokenizer.ipynb  02_weights.ipynb  03_graph.ipynb  04_batch.ipynb  05_model.ipynb  06_arch.ipynb  07_package.ipynb  08_finetune.ipynb  09_serve.ipynb  index.ipynb
max_ports/nbs/.ipynb_checkpoints/: 01_tokenizer-checkpoint.ipynb  02_weights-checkpoint.ipynb  03_graph-checkpoint.ipynb  08_finetune-checkpoint.ipynb
max_ports/scripts/: compare_finetune_property.py  compare_hf_decode.py  compare_hf_embeddings.py  export_finetune_to_max.py  predict_finetuned.py  predict_property.py  setup_model_assets.py  test_smi_ted.py  upload_esol_assets.py
max_ports/serve_api/: __init__.py  __main__.py  app.py  bootstrap.py  decode_runtime.py  manager.py
max_ports/tests/: test_matgram.py
scripts/: render.sh  setup_wgpu.sh
(+4 files in other folders)
