[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "mat-gram01"
dynamic = ["version"]
description = "A [MAX](https://docs.modular.com/max/) custom architecture for [ibm-research/materials.smi-ted](https://huggingface.co/ibm-research/materials.smi-ted)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "Alex", email = "alixjcob559@gmail.com"}]
keywords = ['nbdev']
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = []

[project.urls]
Repository = "https://github.com/alix559/mat-gram01"
Documentation = "https://alix559.github.io/mat-gram01/"

[project.entry-points.nbdev]
mat_gram01 = "mat_gram01._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "mat_gram01.__version__"}

[tool.setuptools.packages.find]
include = ["mat_gram01"]

[tool.nbdev]
