[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "matgram"
version = "0.1.0"
description = "Live SMI-TED property dashboard, checkpoint loader, and MAX controller"
readme = "MATGRAM.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = []

[project.scripts]
matgram = "matgram.cli:cli"

[project.urls]
Repository = "https://github.com/modular/material_grammar"

[tool.hatch.build.targets.wheel]
packages = ["matgram"]
