[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "mat-gram01"
dynamic = ["version"]
description = "MAX custom architecture for IBM SMI-TED"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }

[project.entry-points.nbdev]
mat_gram01 = "mat_gram01._modidx:d"

[tool.setuptools.dynamic]
version = { attr = "mat_gram01.__version__" }

[tool.setuptools.packages.find]
include = ["mat_gram01"]

[tool.nbdev]
lib_path = "mat_gram01"
nbs_path = "nbs"
doc_path = "_docs"
recursive = true
readme_nb = "index.ipynb"
